components/openshift/rhsm/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhsm
  namespace: istio-system
spec:
  to:
    kind: Service
    name: istio-ingressgateway
  port:
    targetPort: 8080
